--- a/src/components/admin/FilmManagement/FilmManagement.module.css
+++ b/src/components/admin/FilmManagement/FilmManagement.module.css
@@ -47,7 +47,8 @@
 .votes {
   margin-top: 6px;
   font-size: 14px;
-  color: #333;
+  color: #000000;
+  font-weight: 600;
 }
 
 .editButton,
